[package]
name = "rlbot-scratch-bridge"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
# thin ~= 66M 2:09, fat ~= 60M 3:30
lto = "thin"

[dependencies]
color-eyre = "0.6.5"
mio = "1.1.1"
rlbot = { git = "https://github.com/rlbot/rust-interface", rev = "32a7dfa" }
rlbot_flat = { git = "https://github.com/rlbot/rust-interface", rev = "32a7dfa" }
rustyscript = { version = "0.12.3", default-features = true, features = ["console", "crypto", "websocket", "node_experimental"] }
# serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tungstenite = "0.28.0"
# https://github.com/rscarson/rustyscript/issues/399
serde = "=1.0.228"
serde_json = "=1.0.120"
serde_bytes = "=0.11.15"

[build-dependencies]
rlbot_flat_dts = { package = "rlbot_flat", git = "https://github.com/rlbot/rust-interface", rev = "2affdb6", features = ["dts"] }
ts-rs = { version = "11.1.0" }
