[package]
name = "rlbot-scratch-bridge"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
# thin ~= 66M 2:09, fat ~= 60M 3:30
lto = "thin"

[dependencies]
color-eyre = "0.6.5"
deno_core = "0.377.0"
deno_error = "0.7.1"
deno_web = { git = "https://github.com/denoland/deno", tag = "v2.6.5" }
deno_webidl = { git = "https://github.com/denoland/deno", tag = "v2.6.5" }
deno_crypto = { git = "https://github.com/denoland/deno", tag = "v2.6.5" }
mio = "1.1.1"
rlbot = { git = "https://github.com/rlbot/rust-interface", rev = "32a7dfa" }
rlbot_flat = { git = "https://github.com/rlbot/rust-interface", rev = "32a7dfa" }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tungstenite = "0.28.0"
futures-util = "0.3.31"
tokio-tungstenite = "0.28.0"
thiserror = "2.0.18"

[patch.crates-io]
# yanked, but we need it
fqdn = { git = "https://github.com/Orange-OpenSource/fqdn", rev = "a473eff" }

[build-dependencies]
rlbot_flat_dts = { package = "rlbot_flat", git = "https://github.com/rlbot/rust-interface", rev = "2affdb6", features = ["dts"] }
ts-rs = { version = "11.1.0" }
